--- a/bench/example.cfg
+++ b/bench/example.cfg
@@ -2,10 +2,10 @@ sleep = 50000
 load = 50000
 cpu = 0
 priority = LOW
-output = /var/log/cpufreq-bench
+output = ./cpufreq-bench.out
 sleep_step = 50000
 load_step = 50000
 cycles = 20
 rounds = 40
 verbose = 0
-governor = ondemand
+governor = interactive
